# chaos

./: LICENSE  setup.cfg  try_me.py
chaos/: __init__.py  core.py  systems.py
tests/: test_core.py
