[metadata]
name = chaos
version = 0.1.0
author = Dr. Ioannis Kafetzis
author_email = ioanniskaf@gmail.com
description = A Python library for simulating chaotic dynamical systems
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iokaf/chaos
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy
    scipy
    matplotlib

[options.package_data]
chaos = py.typed

[options.extras_require]
dev =
    pytest
    mypy
    black

[tool:pytest]
testpaths = tests
